# nifi-lens

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  deny.toml  dist-workspace.toml  release.toml
.github/workflows/: ci.yml  publish-crate.yml  release.yml
integration-tests/: .gitignore  docker-compose.yml  nifilens-config.toml  run.sh  versions.toml
integration-tests/scripts/: authorizers.xml  download-nars.sh  generate-certs.sh  nifi-entrypoint.sh
integration-tests/scripts/conf/: authorizers.xml  login-identity-providers.xml
integration-tests/seeder/: Cargo.toml
integration-tests/seeder/assets/: diff_payload.json  orders_payload.csv
integration-tests/seeder/src/: access_fixture.rs  cleanup.rs  cli.rs  entities.rs  error.rs  main.rs  marker.rs  state.rs
integration-tests/seeder/src/fixture/: backpressure.rs  bulky.rs  common.rs  diff.rs  healthy.rs  invalid.rs  mod.rs  noisy.rs  parameter_contexts.rs  parameterized.rs  payload.rs  registry.rs  remote.rs  reporting_tasks.rs  services.rs  stress.rs  stress_payload.rs  versioned.rs
integration-tests/seeder/src/fixture/orders/: break_.rs  deadletter.rs  mod.rs  remote_targets.rs  shared.rs  sink_apac.rs  sink_eu.rs  sink_us.rs  transform.rs
integration-tests/seeder/tools/gen-orders-payload/: Cargo.toml
integration-tests/seeder/tools/gen-orders-payload/src/: main.rs
release/: release.sh
src/: bytes.rs  cli.rs  error.rs  event.rs  layout.rs  lib.rs  logging.rs  main.rs  test_support.rs  theme.rs  timestamp.rs
src/app/: cleanup.rs  history.rs  mod.rs  navigation.rs  state.rs  ui.rs  worker.rs
src/app/state/: browser.rs  bulletins.rs  events.rs  health.rs  hints.rs  mod.rs  overview.rs  tests.rs  tracer.rs
src/app/state/browser/: mod.rs  tests.rs
src/app/state/tracer/: mod.rs  tests.rs
src/client/: access.rs  browser.rs  build.rs  events.rs  health.rs  history.rs  mod.rs  parameter_context.rs  predicate.rs  queues.rs  reporting_tasks.rs  status.rs  tls_cert.rs  tracer.rs  version_control.rs
src/client/tracer/: content.rs  mod.rs
src/cluster/: config.rs  fetcher.rs  fetcher_tasks.rs  mod.rs  snapshot.rs  store.rs  subscriber.rs
src/config/: init.rs  loader.rs  mod.rs  polling.rs
src/input/: action.rs  mod.rs  modal_gate.rs  verb.rs
src/intent/: mod.rs
src/view/: browser.rs  bulletins.rs  mod.rs  overview.rs  tracer.rs
src/view/browser/: mod.rs  state.rs  worker.rs
src/view/browser/render/: access_modal.rs  action_history_modal.rs  connection.rs  controller_service.rs  identity_modal.rs  mod.rs  param_ref_scan.rs  parameter_context_modal.rs  pg.rs  port.rs  processor.rs  properties_modal.rs  queue_listing.rs  queue_listing_peek.rs  rpg.rs  version_control_modal.rs
src/view/browser/state/: access_modal.rs  action_history_modal.rs  identity_modal.rs  mod.rs  parameter_context_modal.rs  queue_listing.rs  rpg.rs  sparkline.rs  tests.rs  version_control_modal.rs
src/view/bulletins/: mod.rs  modal.rs  render.rs  state.rs  worker.rs
src/view/bulletins/snapshots/: nifi_lens__view__bulletins__modal__tests__modal_long_message_scrolled.snap  nifi_lens__view__bulletins__modal__tests__modal_search_highlights_current_is_1.snap  nifi_lens__view__bulletins__modal__tests__modal_search_input_strip.snap  (+7 more)
src/view/events/: mod.rs  render.rs  state.rs  worker.rs
src/view/health/: mod.rs  render.rs  state.rs  worker.rs
src/view/overview/: mod.rs  render.rs  reporting_tasks_modal.rs  state.rs  worker.rs
src/view/tracer/: mod.rs  modal.rs  modal_state.rs  render.rs  state.rs  worker.rs
src/widget/: context_switcher.rs  filter_bar.rs  fuzzy_find.rs  gauge.rs  goto_menu.rs  help_modal.rs  hint_bar.rs  jump_menu.rs  mod.rs  modal.rs  node_badge.rs  panel.rs  run_icon.rs  save_modal.rs  scroll.rs  search.rs  severity.rs  sparkline.rs  status_bar.rs  top_bar.rs  watch_strip.rs
src/widget/snapshots/: nifi_lens__widget__panel__tests__panel_focused.snap  nifi_lens__widget__panel__tests__panel_right_focused.snap  nifi_lens__widget__panel__tests__panel_unfocused.snap  nifi_lens__widget__panel__tests__panel_with_right_title.snap  nifi_lens__widget__watch_strip__tests__watch_strip_collapsed_below_min_width.snap  nifi_lens__widget__watch_strip__tests__watch_strip_failed_with_long_error.snap  nifi_lens__widget__watch_strip__tests__watch_strip_paused_unfocused.snap  nifi_lens__widget__watch_strip__tests__watch_strip_tailing_focused.snap  nifi_lens__widget__watch_strip__tests__watch_strip_with_trimmed_and_detail_errors.snap
tests/: common_versions_test.rs  integration_action_history.rs  integration_action_history_parameter_context.rs  integration_browser.rs  integration_browser_access.rs  integration_browser_connection_endpoints.rs  integration_browser_queue_listing.rs  integration_browser_version_control.rs  integration_connect.rs  integration_events_watch.rs  integration_health.rs  integration_overview_cluster_nodes.rs  integration_parameter_contexts.rs  integration_remote_process_groups.rs  integration_sparkline.rs  integration_tracer_content.rs  integration_tracer_lineage.rs  integration_tracer_modal.rs  integration_tracer_modal_diff.rs  integration_tracer_tabular.rs  send_regression.rs  wiremock_client_access.rs  wiremock_client_browser.rs  wiremock_client_connect.rs  wiremock_client_errors.rs  wiremock_client_health.rs  wiremock_client_overview.rs  wiremock_client_tracer.rs  wiremock_reporting_tasks.rs
tests/common/: access_helpers.rs  mod.rs  versions.rs
tests/fixtures/browser/: connection.json  controller_service.json  input_port.json  process_group.json  processor.json  recursive_tree.json  root_cs_list.json
tests/fixtures/health/: pg_status_full.json  system_diagnostics_nodewise.json
tests/fixtures/reporting_tasks/: empty.json  full.json
tests/fixtures/tracer/: latest_events.json  lineage_finished.json  lineage_running.json  provenance_event.json
(+177 files in other folders)
