[package]
name = "nifi-lens"
version = "0.8.0"
edition = "2024"
rust-version = "1.88"
description = "A keyboard-driven TUI lens into Apache NiFi 2.x. Browse flows, trace flowfiles, tail bulletins, and debug across clusters and versions."
license = "Apache-2.0"
repository = "https://github.com/maltesander/nifi-lens"
homepage = "https://github.com/maltesander/nifi-lens"
readme = "README.md"
keywords = ["nifi", "tui", "observability", "ratatui", "terminal"]
categories = ["command-line-utilities"]

[workspace]
members = [".", "integration-tests/seeder"]
resolver = "2"

[[bin]]
name = "nifilens"
path = "src/main.rs"

[dependencies]
apache-avro = "0.21"
arboard = "3"
arrow = { version = "58", default-features = false, features = ["json"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.29"
directories = "6"
futures = "0.3"
humantime-serde = "1.1"
nifi-rust-client = { version = "0.11.1", features = ["dynamic"] }
nucleo = "0.5"
parquet = { version = "58", default-features = false, features = ["arrow", "snap", "brotli", "lz4", "zstd"] }
rand = "0.10"
ratatui = "0.30"
rustls = "0.23"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "3"
snafu = "0.9"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
toml = "1.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
url = "2"
uuid = { version = "1", features = ["v4"] }
x509-parser = "0.18"

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
rcgen = "0.14"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tracing-test = "0.2"
wiremock = "0.6"

[build-dependencies]
toml = "1.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Development-only override: uncomment locally when iterating against an
# unreleased change in ../nifi-rust-client. Must remain commented on `main`
# so CI and crates.io releases build against the published version.
# [patch.crates-io]
# nifi-rust-client = { path = "../nifi-rust-client/crates/nifi-rust-client" }
